BaseInterpreter.internal_read_analog_waveform_ex()

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,7 @@
 {
     "typeCheckingMode": "basic",
     "reportOptionalMemberAccess": false,
-    "reportArgumentType": false
+    "reportArgumentType": false,
+    "reportOperatorIssue": false,
+    "reportAttributeAccessIssue": false,
 }
