--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up Python ${{ matrix.python-version }}
-        uses: ni/python-actions/setup-python@5286c12d65d90b2ea738bd57d452dc4366497581 # v0.4.1
+        uses: ni/python-actions/setup-python@16ec9456cbff73d86d59c394acccaeba1b83449c # users/bkeryan/poetry-2.x
         id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
       - name: Set up Poetry
-        uses: ni/python-actions/setup-poetry@5286c12d65d90b2ea738bd57d452dc4366497581 # v0.4.1
+        uses: ni/python-actions/setup-poetry@16ec9456cbff73d86d59c394acccaeba1b83449c # users/bkeryan/poetry-2.x
       - name: Cache virtualenv (with test dependencies)
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
@@ -55,12 +55,12 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up Python ${{ matrix.python-version }}
-        uses: ni/python-actions/setup-python@5286c12d65d90b2ea738bd57d452dc4366497581 # v0.4.1
+        uses: ni/python-actions/setup-python@16ec9456cbff73d86d59c394acccaeba1b83449c # users/bkeryan/poetry-2.x
         id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
       - name: Set up Poetry
-        uses: ni/python-actions/setup-poetry@5286c12d65d90b2ea738bd57d452dc4366497581 # v0.4.1
+        uses: ni/python-actions/setup-poetry@16ec9456cbff73d86d59c394acccaeba1b83449c # users/bkeryan/poetry-2.x
       - name: Cache virtualenv (main only)
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         id: cache-nidaqmx-main-only
