--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,23 +36,14 @@ packages = [{ include = "nidaqmx", from = "generated" }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-numpy = [
-  { version = ">=1.22", python = ">=3.9,<3.12", markers = "implementation_name != 'pypy'" },
-  { version = ">=1.26", python = ">=3.12,<3.13", markers = "implementation_name != 'pypy'" },
-  { version = ">=2.1", python = "^3.13", markers = "implementation_name != 'pypy'" },
-  { version = ">=2.1", python = ">=3.10,<3.11", markers = "implementation_name == 'pypy'" },
-  { version = ">=2.3", python = "^3.11", markers = "implementation_name == 'pypy'" },
-]
+numpy = ">=1.22"
 deprecation = ">=2.1"
 grpcio = { version = ">=1.49.0,<2.0", optional = true }
 protobuf = { version = ">=4.21", optional = true }
 hightime = ">=0.2.2"
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
-click = [
-  { version = ">=8.0.0,<8.2.0", python = ">=3.9,<3.10" },
-  { version = ">=8.0.0", python = "^3.10" },
-]
+click = ">=8.0.0"
 distro = { version = ">=1.9.0", platform = "linux" }
 requests = ">=2.25.0"
 nitypes = {version=">=0.1.0dev3", allow-prereleases=true}
@@ -102,6 +93,17 @@ pytest-cov = ">=4.0"
 pytest-mock = ">=3.0"
 pykka = ">=3.0"
 tox = ">=3.24"
+click = [
+  { version = ">=8.0.0,<8.2.0", python = ">=3.9,<3.10" },
+  { version = ">=8.0.0", python = "^3.10" },
+]
+numpy = [
+  { version = ">=1.22", python = ">=3.9,<3.12", markers = "implementation_name != 'pypy'" },
+  { version = ">=1.26", python = ">=3.12,<3.13", markers = "implementation_name != 'pypy'" },
+  { version = ">=2.1", python = "^3.13", markers = "implementation_name != 'pypy'" },
+  { version = ">=2.1", python = ">=3.10,<3.11", markers = "implementation_name == 'pypy'" },
+  { version = ">=2.3", python = "^3.11", markers = "implementation_name == 'pypy'" },
+]
 
 [tool.poetry.scripts]
 nidaqmx = 'nidaqmx.__main__:main'
