--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,11 @@ packages = [{ include = "nidaqmx", from = "generated" }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-numpy = ">=1.22"
+# NumPy 2.0.x is the last version that supports Python 3.9, but it crashes with Python 3.13.
+numpy = [
+  { version = ">=1.22", python = ">=3.9,<3.13" },
+  { version = ">=2.1", python = "^3.13" }
+]
 deprecation = ">=2.1"
 grpcio = { version = ">=1.49.0,<2.0", optional = true }
 protobuf = { version = ">=4.21", optional = true }
@@ -97,6 +101,7 @@ click = [
   { version = ">=8.0.0,<8.2.0", python = ">=3.9,<3.10" },
   { version = ">=8.0.0", python = "^3.10" },
 ]
+# Specify additional NumPy version constraints to speed up locking and test with binary wheels that support PyPy.
 numpy = [
   { version = ">=1.22", python = ">=3.9,<3.12", markers = "implementation_name != 'pypy'" },
   { version = ">=1.26", python = ">=3.12,<3.13", markers = "implementation_name != 'pypy'" },
