--- a/pyproject.toml
+++ b/pyproject.toml
@@ -186,6 +186,7 @@ reportArgumentType = false
 reportAttributeAccessIssue = false
 reportInvalidTypeForm = false
 reportOperatorIssue = false
+reportOptionalIterable = false
 reportOptionalMemberAccess = false
 reportReturnType = false
 
