--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,10 +116,10 @@ nidaqmx = 'nidaqmx.__main__:main'
 
 [tool.black]
 line-length = 100
-extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/|src/handwritten/"
+extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/"
 
 [tool.ni-python-styleguide]
-extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
+extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --strict-markers"
