--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,6 +130,7 @@ extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templ
 
 [tool.ni-python-styleguide]
 extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
+application-import-names = "nidaqmx"
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --strict-markers"
