--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,9 @@
-[tool.poetry]
+[project]
 name = "nidaqmx"
-version = "1.3.0-dev0"
-license = "MIT"
 description = "NI-DAQmx Python API"
-authors = ["NI <opensource@ni.com>"]
-maintainers = [
-  "Zach Hindes <zach.hindes@ni.com>",
-  "Maxx Boehme <maxx.boehme@ni.com>",
-  "Brad Keryan <brad.keryan@ni.com>",
-]
-readme = "README.rst"
-repository = "https://github.com/ni/nidaqmx-python"
-documentation = "https://nidaqmx-python.readthedocs.io"
+license = "MIT"
 keywords = ["nidaqmx", "nidaq", "daqmx", "daq"]
+version = "1.3.0-dev0"
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
@@ -31,19 +22,39 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
   "Topic :: System :: Hardware :: Hardware Drivers",
 ]
+dynamic = ["dependencies"]
+readme = "README.rst"
+authors = [{name = "NI", email = "opensource@ni.com"}]
+maintainers = [
+  {name = "Zach Hindes", email = "zach.hindes@ni.com"},
+  {name = "Maxx Boehme", email = "maxx.boehme@ni.com"},
+  {name = "Brad Keryan", email = "brad.keryan@ni.com"},
+]
+requires-python = '>=3.9,<4.0'
+
+[project.urls]
+repository = "https://github.com/ni/nidaqmx-python"
+documentation = "https://nidaqmx-python.readthedocs.io"
+
+[project.scripts]
+nidaqmx = 'nidaqmx.__main__:main'
+
+[project.optional-dependencies]
+grpc = ['grpcio (>=1.49.0,<2.0)', 'protobuf (>=4.21)']
+
+[tool.poetry]
+
 exclude = ["nidaqmx/tests"]
 packages = [{ include = "nidaqmx", from = "generated" }]
+requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
-python = "^3.9"
 # NumPy 2.0.x is the last version that supports Python 3.9, but it crashes with Python 3.13.
 numpy = [
   { version = ">=1.22", python = ">=3.9,<3.13" },
   { version = ">=2.1", python = "^3.13" }
 ]
 deprecation = ">=2.1"
-grpcio = { version = ">=1.49.0,<2.0", optional = true }
-protobuf = { version = ">=4.21", optional = true }
 hightime = ">=0.2.2"
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
@@ -52,9 +63,6 @@ distro = { version = ">=1.9.0", platform = "linux" }
 requests = ">=2.25.0"
 typing_extensions = { version = ">=4.0.0" }
 nitypes = {version=">=0.1.0dev10", allow-prereleases=true}
-
-[tool.poetry.extras]
-grpc = ["grpcio", "protobuf"]
 
 [tool.poetry.group.codegen.dependencies]
 Mako = "^1.2"
@@ -69,7 +77,12 @@ mypy-protobuf = ">=3.4"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-Sphinx = { version = ">=8.2", python = "^3.11" }
+# The latest Sphinx requires a recent Python version.
+Sphinx = [
+  { version = ">=7.4", python = ">=3.9,<3.10" },
+  { version = ">=8.1", python = ">=3.10,<3.11" },
+  { version = ">=8.2", python = "^3.11" },
+]
 sphinx-rtd-theme = ">=1.0.0"
 toml = ">=0.10.2"
 
@@ -111,15 +124,13 @@ numpy = [
   { version = ">=2.3", python = "^3.11", markers = "implementation_name == 'pypy'" },
 ]
 
-[tool.poetry.scripts]
-nidaqmx = 'nidaqmx.__main__:main'
-
 [tool.black]
 line-length = 100
 extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/"
 
 [tool.ni-python-styleguide]
 extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
+application-import-names = "nidaqmx"
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --strict-markers"
@@ -148,7 +159,7 @@ markers = [
 ]
 
 [build-system]
-requires = ["poetry-core>=1.8"]
+requires = ["poetry-core>=2.1,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
