add a tox for benchmark

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{39,310,311,312,313}-base, py{39,310,311,312,313}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, report, docs
+envlist = clean, py{39,310,311,312,313}-base, py{39,310,311,312,313}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, report, docs, benchmark
 
 [testenv]
 skip_install = true
@@ -42,3 +42,12 @@ commands =
    poetry install -v --only main,docs
    # Use -W to treat warnings as errors.
    poetry run sphinx-build -b html -W docs docs/_build
+
+[testenv:benchmark]
+base_python = python3.11
+skip_install = true
+allowlist_externals = poetry
+commands =
+   poetry run python --version
+   poetry install -v --only main,test
+   poetry run pytest tests/benchmark/ --quiet -k "library" --benchmark-only {posargs}
