address feedback from brad

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{39,310,311,312,313}-base, py{39,310,311,312,313}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, report, docs, benchmark
+envlist = clean, py{39,310,311,312,313}-base, py{39,310,311,312,313}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, py39-base-benchmark, report, docs
 
 [testenv]
 skip_install = true
@@ -13,7 +13,7 @@ allowlist_externals = poetry
 setenv =
    base: INSTALL_OPTS=--only main,test
    grpc: INSTALL_OPTS=--only main,test --extras grpc
-   base: PYTEST_OPTS=-k "not grpc"
+   base: PYTEST_OPTS=-k "library"
    grpc: PYTEST_OPTS=
    nicaiu: NIDAQMX_C_LIBRARY=nicaiu
    nicai_utf8: NIDAQMX_C_LIBRARY=nicai_utf8
@@ -24,7 +24,8 @@ commands =
    poetry run python --version
    poetry install -v {env:INSTALL_OPTS}
    poetry run python -c "from nidaqmx._lib import lib_importer; print(f'Library: {lib_importer.windll._library._name}\nLibrary encoding: {lib_importer.encoding}')"
-   poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=test_results/system-{envname}.xml {env:PYTEST_OPTS} {posargs}
+   !benchmark: poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=test_results/system-{envname}.xml {env:PYTEST_OPTS} {posargs}
+   benchmark: poetry run pytest tests/benchmark/ --quiet --junitxml=test_results/benchmark-{envname}.xml {env:PYTEST_OPTS} {posargs}
 
 [testenv:clean]
 commands = poetry run coverage erase
@@ -42,12 +43,3 @@ commands =
    poetry install -v --only main,docs
    # Use -W to treat warnings as errors.
    poetry run sphinx-build -b html -W docs docs/_build
-
-[testenv:benchmark]
-base_python = python3.11
-skip_install = true
-allowlist_externals = poetry
-commands =
-   poetry run python --version
-   poetry install -v --only main,test
-   poetry run pytest tests/benchmark/ --quiet -k "library" --benchmark-only {posargs}
