--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,8 @@ Mako = "^1.2"
 grpcio-tools = [
   { version = "1.49.1", python = ">=3.9,<3.12" },
   { version = "1.59.0", python = ">=3.12,<3.13" },
-  { version = "1.67.0", python = "^3.13" },
+  { version = "1.67.0", python = ">=3.13,<3.14" },
+  { version = "1.75.1", python = "^3.14" },
 ]
 mypy-protobuf = ">=3.4"
 
