--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
   "Topic :: System :: Hardware :: Hardware Drivers",
@@ -69,7 +70,8 @@ Mako = "^1.2"
 grpcio-tools = [
   { version = "1.49.1", python = ">=3.9,<3.12" },
   { version = "1.59.0", python = ">=3.12,<3.13" },
-  { version = "1.67.0", python = "^3.13" },
+  { version = "1.67.0", python = ">=3.13,<3.14" },
+  { version = "1.75.1", python = "^3.14" },
 ]
 mypy-protobuf = ">=3.4"
 
