tests: Run system tests on Python 3.14 and 3.14t

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{39,310,311,312,313}-base, py{39,310,311,312,313}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, py39-base-benchmark, report, docs
+# grpcio does not have binary wheels for pypy or free-threading, as of version 1.75.1.
+# nidaqmxbot does not have pypy yet.
+envlist = clean, py{39,310,311,312,313,314,314t}-base, py{39,310,311,312,313,314}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, py39-base-benchmark, report, docs
 
 [testenv]
 skip_install = true
