tests: Enable Python 3.14 for system tests (#854)
* tests: Run system tests on Python 3.14 and 3.14t

* tests: Disable py314t-base and use python -VV

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,10 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{39,310,311,312,313}-base, py{39,310,311,312,313}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, py39-base-benchmark, report, docs
+# grpcio does not have binary wheels for pypy or free-threading, as of version 1.75.1.
+# nidaqmxbot does not have pypy yet.
+# TODO: Get system tests running on Python 3.14t (free-threaded) - https://github.com/ni/nidaqmx-python/issues/853 
+envlist = clean, py{39,310,311,312,313,314,314}-base, py{39,310,311,312,313,314}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, py39-base-benchmark, report, docs
 
 [testenv]
 skip_install = true
@@ -21,7 +24,7 @@ platform =
    nicaiu: win32
    nicai_utf8: win32
 commands =
-   poetry run python --version
+   poetry run python -VV
    poetry install -v {env:INSTALL_OPTS}
    poetry run python -c "from nidaqmx._lib import lib_importer; print(f'Library: {lib_importer.windll._library._name}\nLibrary encoding: {lib_importer.encoding}')"
    !benchmark: poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=test_results/system-{envname}.xml {env:PYTEST_OPTS} {posargs}
@@ -39,7 +42,7 @@ commands =
 # base_python should match the version specified in .readthedocs.yml and the PR workflow.
 base_python = python3.11
 commands =
-   poetry run python --version
+   poetry run python -VV
    poetry install -v --only main,docs
    # Use -W to treat warnings as errors.
    poetry run sphinx-build -b html -W docs docs/_build
