--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,10 +129,10 @@ numpy = [
 
 [tool.black]
 line-length = 100
-extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/"
+extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/|ni-apis/"
 
 [tool.ni-python-styleguide]
-extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
+extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates,ni-apis"
 application-import-names = "nidaqmx"
 
 [tool.pytest.ini_options]
