--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ documentation = "https://nidaqmx-python.readthedocs.io"
 nidaqmx = 'nidaqmx.__main__:main'
 
 [project.optional-dependencies]
-grpc = ['grpcio (>=1.49.0,<2.0)', 'protobuf (>=4.21)']
+grpc = ['grpcio (>=1.49.0,<2.0)', 'protobuf (>=4.21)', 'ni-grpcdevice-v1-proto (>=1.0.0)']
 
 [tool.poetry]
 
@@ -64,7 +64,6 @@ distro = { version = ">=1.9.0", platform = "linux" }
 requests = ">=2.25.0"
 typing_extensions = { version = ">=4.0.0" }
 nitypes = {version=">=0.1.0dev10", allow-prereleases=true}
-ni-grpcdevice-v1-proto = { version = "^1.0.0" }
 
 [tool.poetry.group.codegen.dependencies]
 Mako = "^1.2"
