Add ni-apis as a submodule (#859)
* Add ni-apis submodule and update generation of session.proto

* Add step to initialize ni-apis submodule in build workflow

* exclude ni-apis from linting

* move submodule to third_party

* use ni.grpcdevice.v1.proto instead of session.proto

* clean up .gitmodules

* brad's feedback

---------

Co-authored-by: Mike Prosser <Mike.Prosser@emerson.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ documentation = "https://nidaqmx-python.readthedocs.io"
 nidaqmx = 'nidaqmx.__main__:main'
 
 [project.optional-dependencies]
-grpc = ['grpcio (>=1.49.0,<2.0)', 'protobuf (>=4.21)']
+grpc = ['grpcio (>=1.49.0,<2.0)', 'protobuf (>=4.21)', 'ni-grpcdevice-v1-proto (>=1.0.0)']
 
 [tool.poetry]
 
@@ -129,10 +129,10 @@ numpy = [
 
 [tool.black]
 line-length = 100
-extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/"
+extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/|third_party/"
 
 [tool.ni-python-styleguide]
-extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
+extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates,third_party"
 application-import-names = "nidaqmx"
 
 [tool.pytest.ini_options]
