--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,7 +158,7 @@ requires = ["poetry-core>=2.1,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
-files = "generated/,tests/"
+files = "examples/,generated/,tests/"
 check_untyped_defs = true
 namespace_packages = true
 warn_redundant_casts = true
