examples: Enable mypy for the example programs (#879)
* examples: Enable mypy

* examples: Fix error: Incompatible types in assignment (expression has type "list[bool]", variable has type "bool")  [assignment]

* examples: Ignore missing imports for nptdms

* github: Update check.yml to install examples dependency group

* docs: Add --with examples to CONTRIBUTING.md

* examples: Fix Linux mypy errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,7 +158,7 @@ requires = ["poetry-core>=2.1,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
-files = "generated/,tests/"
+files = "examples/,generated/,tests/"
 check_untyped_defs = true
 namespace_packages = true
 warn_redundant_casts = true
@@ -178,6 +178,8 @@ module = [
   "nidaqmx.*",
   # https://github.com/ionelmc/pytest-benchmark/issues/212 - Add type annotations
   "pytest_benchmark.*",
+  # https://github.com/adamreeve/npTDMS/issues/301 - Type Hints/Annotations
+  "nptdms.*",
 ]
 ignore_missing_imports = true
 
