Remove waveform changes from nidaqmx proto

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -114,6 +114,13 @@ PreScaledUnits = Degrees
 ScaledUnits = potatoes
 ScaleType = Linear
 
+[DAQmxScale power_scale]
+Lin.Slope = 1
+Lin.YIntercept = 0
+PreScaledUnits = Watts
+ScaledUnits =
+ScaleType = Linear
+
 [DAQmxDevice aoTester]
 ProductType = PXIe-4322
 DevSerialNum = 0x0
