Update nidaqmx MAX config file

--- a/tests/max_config/nidaqmxMaxConfig26Q1.ini
+++ b/tests/max_config/nidaqmxMaxConfig26Q1.ini
@@ -1,6 +1,6 @@
 ﻿[DAQmx]
-MajorVersion = 21
-MinorVersion = 8
+MajorVersion = 26
+MinorVersion = 0
 
 [DAQmxChannel AOTesterTask/VoltageOut_0]
 AO.OutputType = Voltage
@@ -112,6 +112,13 @@ Lin.Slope = 2
 Lin.YIntercept = 0
 PreScaledUnits = Degrees
 ScaledUnits = potatoes
+ScaleType = Linear
+
+[DAQmxScale power_scale]
+Lin.Slope = 1
+Lin.YIntercept = 0
+PreScaledUnits = Watts
+ScaledUnits =
 ScaleType = Linear
 
 [DAQmxDevice aoTester]
@@ -307,3 +314,12 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 ProductNum = 0x7B40
 BusType = USB
+
+[DAQmxDevice pxie4311]
+ProductType = PXIe-4311
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x7B1AC4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 4
