--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ click = ">=8.0.0"
 distro = { version = ">=1.9.0", platform = "linux" }
 requests = ">=2.25.0"
 typing_extensions = { version = ">=4.0.0" }
-nitypes = {version=">=0.1.0dev10", allow-prereleases=true}
+nitypes = {version=">=1.0.0"}
 
 [tool.poetry.group.codegen.dependencies]
 Mako = "^1.2"
