nidaqmx: Restore Python 3.9 support for internal testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
   "Operating System :: Microsoft :: Windows",
   "Operating System :: POSIX",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -30,7 +31,7 @@ maintainers = [
   {name = "Maxx Boehme", email = "maxx.boehme@ni.com"},
   {name = "Brad Keryan", email = "brad.keryan@ni.com"},
 ]
-requires-python = '>=3.10,<4.0'
+requires-python = '>=3.9,<4.0'
 
 [project.urls]
 repository = "https://github.com/ni/nidaqmx-python"
@@ -51,7 +52,7 @@ requires-poetry = '>=2.1,<3.0'
 [tool.poetry.dependencies]
 # NumPy 2.0.x is the last version that supports Python 3.9, but it crashes with Python 3.13.
 numpy = [
-  { version = ">=1.22", python = ">=3.10,<3.13" },
+  { version = ">=1.22", python = ">=3.9,<3.13" },
   { version = ">=2.1", python = "^3.13" }
 ]
 deprecation = ">=2.1"
@@ -67,7 +68,7 @@ nitypes = {version=">=1.0.0"}
 [tool.poetry.group.codegen.dependencies]
 Mako = "^1.2"
 grpcio-tools = [
-  { version = "1.49.1", python = ">=3.10,<3.12" },
+  { version = "1.49.1", python = ">=3.9,<3.12" },
   { version = "1.59.0", python = ">=3.12,<3.13" },
   { version = "1.67.0", python = ">=3.13,<3.14" },
   { version = "1.75.1", python = "^3.14" },
@@ -91,7 +92,10 @@ toml = ">=0.10.2"
 optional = true
 
 [tool.poetry.group.examples.dependencies]
-matplotlib = ">=3.9.0"
+matplotlib = [
+  { version = ">=3.9.0,<3.10.0", python = ">=3.9,<3.10" },
+  { version = ">=3.9.0", python = "^3.10" },
+]
 nptdms = ">=1.9.0"
 
 [tool.poetry.group.lint.dependencies]
@@ -109,10 +113,13 @@ pytest-cov = ">=4.0"
 pytest-mock = ">=3.0"
 pykka = ">=3.0"
 tox = ">=3.24"
-click = ">=8.0.0"
+click = [
+  { version = ">=8.0.0,<8.2.0", python = ">=3.9,<3.10" },
+  { version = ">=8.0.0", python = "^3.10" },
+]
 # Specify additional NumPy version constraints to speed up locking and test with binary wheels that support PyPy.
 numpy = [
-  { version = ">=1.22", python = ">=3.10,<3.12", markers = "implementation_name != 'pypy'" },
+  { version = ">=1.22", python = ">=3.9,<3.12", markers = "implementation_name != 'pypy'" },
   { version = ">=1.26", python = ">=3.12,<3.13", markers = "implementation_name != 'pypy'" },
   { version = ">=2.1", python = "^3.13", markers = "implementation_name != 'pypy'" },
   { version = ">=2.1", python = ">=3.10,<3.11", markers = "implementation_name == 'pypy'" },
