--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,8 @@ grpcio-tools = [
   { version = "1.67.0", python = ">=3.13,<3.14" },
   { version = "1.75.1", python = "^3.14" },
 ]
-mypy-protobuf = ">=3.4"
+# mypy-protobuf 3.6 is the last version that supports protobuf v4.
+mypy-protobuf = ">=3.4,<3.7"
 
 [tool.poetry.group.docs]
 optional = true
