--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,13 +68,21 @@ nitypes = {version=">=1.0.0"}
 [tool.poetry.group.codegen.dependencies]
 Mako = "^1.2"
 grpcio-tools = [
+  # requires protobuf v4 or later
   { version = "1.49.1", python = ">=3.9,<3.12" },
   { version = "1.59.0", python = ">=3.12,<3.13" },
+  # requires protobuf v5 or later
   { version = "1.67.0", python = ">=3.13,<3.14" },
+  # requires protobuf v6 or later
   { version = "1.75.1", python = "^3.14" },
 ]
 # mypy-protobuf 3.6 is the last version that supports protobuf v4.
-mypy-protobuf = ">=3.4,<3.7"
+mypy-protobuf = [
+  # requires protobuf v4 or later
+  {version = ">=3.4,<3.7", python = ">=3.9,<3.14"},
+  # requires protobuf v6 or later
+  {version = ">=3.4", python = "^3.14"}
+]
 
 [tool.poetry.group.docs]
 optional = true
