--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ click = ">=8.0.0"
 distro = { version = ">=1.9.0", platform = "linux" }
 requests = ">=2.25.0"
 typing_extensions = { version = ">=4.0.0" }
-nitypes = {version=">=1.0.1.dev0"}
+nitypes = {version=">=1.0.1"}
 
 [tool.poetry.group.codegen.dependencies]
 Mako = "^1.2"
